change css file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Home</title>
-	<link type="text/css" rel="stylesheet" href="css/home.css"/>
+	<link type="text/css" rel="stylesheet" href="css/simple.css"/>
 	<meta charset="utf-8"/>
 	</head>
 	<body>
@@ -16,7 +16,7 @@
 			<li><a href="puzzle.html">Puzzle</a></li>
 		</ul>
 
-		<h1Karen's Website</h1>
+		<h1>Karen's Website</h1>
 		<p>This is my website</p>
 			
 
