--- a/family.html
+++ b/family.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>About Me</title>
+	<title>Family</title>
 	<link type="text/css" rel="stylesheet" href="css/simple.css"/>
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-
-<!--We need to identify the menu by giving it a class attribute. class="menu" -->
-
 		<ul class="menu">
 			<li><a href="index.html">Home</a></li>
-			<li class="selected">About</li>
-			<!-- this new rule applies only to li elements with a class attribute of selected.
-			in the CSS file you specify li.selected -->
+			<li><a href="about-me.html">About</a></li>
 			<li><a href="games.html">Games</a></li>
 			<li><a href="hobbies.html">Hobbies</a></li>
 			<li><a href="pets.html">Pets</a></li>
-			<li><a href="family.html">Family</a></li>
+			<li class="selected">Family</li>
 			<li><a href="puzzle.html">Puzzle</a></li>
 		</ul>
-		<h1>About Me</h1>
-		
-		<p>My name is <strong>Karen McCarthy.</strong></p>
-		<p>I live in Waterford, Ireland.</p>
-		<p>I grew up in Cork</p>
+		<h1>Family</h1>
+		<p>From West Cork</p>
+
+
+
 		<p>This is my photo:</p>
 		<p><img src="images/ling-ling.png" alt="Picture of Ling Ling" width="240"/></p>
-	
 	</body>
 </html>
