--- a/games.html
+++ b/games.html
@@ -7,13 +7,12 @@
 	</head>
 	<body>
 		<ul class="menu">
-			<li class="selected">Games</li>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about-me.html">About</a></li>
 			<li class="selected">Games</li>
-			<li><a href="Hobbies.html">Hobbies</a></li>
-			<li><a href="Pets.html">Pets</a></li>
-			<li><a href="Family.html">Family</a></li>
+			<li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="pets.html">Pets</a></li>
+			<li><a href="family.html">Family</a></li>
 			<li><a href="puzzle.html">Puzzle</a></li>
 		</ul>
 		<h1>Games</h1>
