--- a/hobbies.html
+++ b/hobbies.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>About Me</title>
+	<title>Hobbies</title>
 	<link type="text/css" rel="stylesheet" href="css/simple.css"/>
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-
 		<ul class="menu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about-me.html">About</a></li>
 			<li><a href="games.html">Games</a></li>
-			<li><a href="hobbies.html">Hobbies</a></li>
+			<li class="selected">Hobbies</li>
 			<li><a href="pets.html">Pets</a></li>
 			<li><a href="family.html">Family</a></li>
-			<li class="selected">Puzzle</li>
+			<li><a href="puzzle.html">Puzzle</a></li>
 		</ul>
+		<h1>Hobbies</h1>
+
+		<p>Online learning</p>
+		<p>Salsa</p>
+		<p>Walking</p>
 		
-		<table class="crossword">
-			<tr>
-				<td class="black" colspan="3"></td><td>1</td><td class="black"></td>
-			</tr>
-			<tr>
-				<td>2</td><td>3</td><td></td><td></td><td></td>
-			</tr>
-</table>	
-
-
-
 	</body>
 </html>
