--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 			<li class="selected">Home</li>
 			<li><a href="about-me.html">About</a></li>
 			<li><a href="games.html">Games</a></li>
-			<li><a href="Hobbies.html">Hobbies</a></li>
-			<li><a href="Pets.html">Pets</a></li>
-			<li><a href="Family.html">Family</a></li>
+			<li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="pets.html">Pets</a></li>
+			<li><a href="family.html">Family</a></li>
 			<li><a href="puzzle.html">Puzzle</a></li>
 		</ul>
 
-		<h1>Karen's Website</h1>
+		<h1></h1>Karen's Website</h1>
 		<p>This is my website</p>
 			
 
